# EpiVM

./: Main.lhs  Makefile  README  README.Mac  README_git  Setup.hs  epic.cabal  epivm.cabal
EMachine/: Bytecode.lhs  CodegenC.lhs  Compiler.lhs  Language.lhs  Lexer.lhs  Parser.y  Scopecheck.lhs
ESC/: Main.lhs  Prefix.hs
Epic/: Bytecode.lhs  CodegenC.lhs  Compiler.lhs  Language.lhs  Lexer.lhs  OTTLang.lhs  Parser.y  Prefix.hs  Scopecheck.lhs  Simplify.lhs
compiler/: Main.lhs
evm/: Makefile  closure.c  closure.h  mainprog.c  stdfuns.c  stdfuns.h
examples/: Prelude.e  adder.e  bigint.e  hellouser.e  hworld.e  intthing.e  listy.e  tailcall.e  testprog  testprog.e  testprogslow.e
lib/: Makefile  Prelude.e
tests/: Makefile  Prelude.e  adder.e  bigint.e  expected  hworld.e  intthing.e  listy.e  tailcall.e  tailfact.e  test.pl
