Name:		epic
Version:	0.1
Author:		Edwin Brady
License:	BSD3
License-file:	LICENSE
Maintainer:	eb@dcs.st-and.ac.uk
Homepage:	http://www.dcs.st-and.ac.uk/~eb/
Stability:	experimental
Build-depends:	base, haskell98, util, mtl, Cabal
Extensions:	MultiParamTypeClasses, FunctionalDependencies,
		ExistentialQuantification, OverlappingInstances
Synopsis:	Compiler for Supercombinator language
Exposed-modules: Epic.Compiler
Other-modules: Epic.Bytecode Epic.Parser Epic.Scopecheck
               Epic.Language Epic.Lexer Epic.CodegenC
	       Epic.Prefix Epic.OTTLang
