Name:		epic
Version:	0.1.2.1
Author:		Edwin Brady
License:	BSD3
License-file:	LICENSE
Maintainer:	eb@dcs.st-and.ac.uk
Homepage:	http://www.dcs.st-and.ac.uk/~eb/epic.php
Stability:	experimental
Category:       Compilers/Interpreters
Synopsis:	Compiler for a supercombinator language
Description:    Epic is a simple functional language which compiles to
                reasonably efficient C code, using the Boehm-Demers-Weiser 
	        garbage collector. It is currently used as a back end for 
	        the Idris dependently typed programming language. It is invoked
                as a library, as it is intended as a compiler back end.

Data-files:    evm/libevm.a evm/closure.h evm/stdfuns.h evm/stdfuns.c evm/mainprog.c 
Extra-source-files: evm/closure.c evm/closure.h evm/stdfuns.h evm/mainprog.c evm/stdfuns.c evm/Makefile 

Cabal-Version:  >= 1.2.3
Build-type:     Custom

Library
        Exposed-modules: Epic.Compiler
        Other-modules: Epic.Bytecode Epic.Parser Epic.Scopecheck
                       Epic.Language Epic.Lexer Epic.CodegenC
                       Epic.OTTLang Epic.Simplify Paths_epic
        Build-depends:	base, haskell98, mtl, Cabal, array, directory


Executable     epic
               Main-is: Main.lhs
               Other-modules: Epic.Bytecode Epic.Parser Epic.Scopecheck
                              Epic.Language Epic.Lexer Epic.CodegenC
                              Epic.OTTLang Epic.Simplify Paths_epic
               Build-depends:	base, haskell98, mtl, Cabal, array, directory

